src/objects/KS_Estructura_Geografica__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Objeto donde se recoge la configuración de regiones y areas para cada organización</description>
    <fields>
        <fullName>KS_Area__c</fullName>
        <label>Área</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_CPDesde__c</fullName>
        <label>CPDesde</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_CPHasta__c</fullName>
        <label>CPHasta</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_CountryCode__c</fullName>
        <label>CountryCode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ISOCountryCodes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Delegacion__c</fullName>
        <label>Delegación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Delegacion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Organizacion_de_ventas__c</fullName>
        <label>Organización de ventas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Organizacion_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Zona__c</fullName>
        <label>Zona</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Zona_Geog</valueSetName>
        </valueSet>
    </fields>
    <label>Estructura Geografica</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>KS_CPDesde__c</columns>
        <columns>KS_CPHasta__c</columns>
        <columns>KS_Area__c</columns>
        <columns>KS_Delegacion__c</columns>
        <columns>KS_Zona__c</columns>
        <columns>KS_Organizacion_de_ventas__c</columns>
        <columns>KS_CountryCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <label>Estructura Geografica</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estructuras Geograficas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>